Fixes page width bug on iphone 5

--- a/src/sharedComponents/TrimHash/trimHash.scss
+++ b/src/sharedComponents/TrimHash/trimHash.scss
@@ -1,6 +1,6 @@
 .trim-hash-container {
   display: flex;
-  width: 100vw;
+  width: 50vw;
   max-width: 100%;
 }
 
